[project]
name = "comfyui_xobiomesh"
description = "An advanced ComfyUI extension that enables multi-agent LLM conversations using Ollama models."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["ollama>=0.1.6"]

[project.urls]
Repository = "https://github.com/xobiomesh/ComfyUI_xObiomesh"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_xObiomesh"
Icon = ""
